29/06/2021 - Bot python 0.1
===========================
    - add $credit and $version commands